# fullstack-starknet

./: .gitignore  README.md
diagrams/: design.excalidraw
part1/starknet/contracts/: contract.cairo
part1/starknet/tests/: test_contract.py
part2/pi/: README.md
part2/pi/app/: main.py
part3/pi/: mypy.ini
part3/pi/app/: main.py
part3/starknet/contracts/: contract.cairo
part3/starknet/tests/: test_contract.py
part4/pi/app/: config.py  main.py
part4/starknet/contracts/: contract.cairo
part4/starknet/tests/: test_Account.py  test_contract.py  test_safemath.py  utils.py
part5/frontend/: .eslintrc.json  README.md  next-seo.config.js  next-sitemap.config.js  package.json  tsconfig.json
part5/frontend/.github/workflows/: lints.yml  tests.yml
part5/frontend/public/: manifest.json  robots.txt  sitemap.xml
part5/frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  ThemeToggle.tsx  index.ts
part5/frontend/src/components/samples/: CTASection.tsx  SomeText.tsx  index.ts
part5/frontend/src/components/wallet/: MintTokens.tsx  RegisterVehicle.tsx  Transactions.tsx  UpdateSigner.tsx  WalletConnect.tsx  consts.ts  index.ts
part5/frontend/src/context/: index.ts
part5/frontend/src/context/BlockHashProvider/: context.ts  provider.tsx
part5/frontend/src/context/StarknetProvider/: context.ts  index.ts  (+3 more)
part5/frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
part5/frontend/src/styles/: globals.css
pi/: pyproject.toml
pi/app/: main.py
starknet/: Makefile
starknet/contracts/: contract.cairo
starknet/tests/: test_contract.py
(+5 files in other folders)
